// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`выдача для роботов не должен ничего рендерить и падать на componentDidMount 1`] = `null`;

exports[`тестовый баннер должен рендерить HTML для баннера 1`] = `
<vertisads-r1
  class="ym-hide-content r1 VertisAds VertisAds_place_r1"
>
  <vertisads-rtb
    class="VertisAds__rtb VertisAds__index_0"
  />
</vertisads-r1>
`;

exports[`тестовый баннер должен рендерить HTML для баннера с несколькими источниками 1`] = `
<vertisads-r1
  class="ym-hide-content r1 VertisAds VertisAds_place_r1"
>
  <vertisads-adfox
    class="VertisAds__adfox VertisAds__index_0"
  />
  <vertisads-rtb
    class="VertisAds__rtb VertisAds__index_1"
  />
  <vertisads-adfox
    class="VertisAds__adfox VertisAds__index_2"
  />
</vertisads-r1>
`;

exports[`тестовый баннер серверный direct должен отрисовать баннер для нового формата direct_premium 1`] = `
<div>
  <vertisads-c3
    class="ym-hide-content c3 VertisAds VertisAds_place_c3"
  >
    <vertisads-direct
      class="VertisAds__direct VertisAds__index_0 VertisAds__direct_layout_white VertisAds__direct_view_default"
    >
      <div
        class="VertisAds__direct-item VertisAds__direct-item_view_default"
      >
        <a
          class="VertisAds__title link"
          href="direct_premium url"
          target="_blank"
        >
          <span
            class="VertisAds__title-text"
          >
            direct_premium title
          </span>
          <div
            class="VertisAds__click-area"
          />
        </a>
        <div
          class="VertisAds__content"
        >
          <div
            class="VertisAds__wheel"
          >
            <div
              class="VertisAds__wheel-ph"
            />
          </div>
          <div
            class="VertisAds__text"
          >
            direct_premium body
          </div>
          <div
            class="VertisAds__foot"
          >
            <a
              class="VertisAds__domain link"
              href="direct_premium url"
              target="_blank"
            >
              direct_premium domain
            </a>
            <div
              class="VertisAds__badge"
            >
              Реклама
            </div>
            <img
              class="VertisAds__counter"
              src="direct_premium link_headdirect_premium link_tail"
            />
          </div>
        </div>
      </div>
    </vertisads-direct>
  </vertisads-c3>
</div>
`;

exports[`тестовый баннер серверный direct должен отрисовать два баннера из одного источника (source.groupKey) с учетом приоритетов (direct+direct), если нет первого источника 1`] = `
<div>
  <vertisads-top
    class="ym-hide-content top VertisAds VertisAds_place_top"
  >
    <vertisads-direct
      class="VertisAds__direct VertisAds__index_0 VertisAds__direct_view_default"
    >
      <div
        class="VertisAds__direct-item VertisAds__direct-item_view_default"
      >
        <a
          class="VertisAds__title link"
          href="url-for-direct0"
          target="_blank"
        >
          <img
            class="VertisAds__favicon"
            src="//favicon.yandex.net/favicon/direct0 domain"
          />
          <span
            class="VertisAds__title-text"
          >
            direct0 title
          </span>
          <div
            class="VertisAds__click-area"
          />
        </a>
        <div
          class="VertisAds__content"
        >
          <div
            class="VertisAds__text"
          >
            direct0 body
          </div>
          <div
            class="VertisAds__foot"
          >
            <a
              class="VertisAds__domain link"
              href="url-for-direct0"
              target="_blank"
            >
              direct0 domain
            </a>
            <div
              class="VertisAds__badge"
            >
              Реклама
            </div>
            <img
              class="VertisAds__counter"
              src="common linkHeaddirect0 linkTal"
            />
          </div>
        </div>
      </div>
    </vertisads-direct>
  </vertisads-top>
  <vertisads-c2
    class="ym-hide-content c2 VertisAds VertisAds_place_c2"
  >
    <vertisads-direct
      class="VertisAds__direct VertisAds__index_0 VertisAds__direct_layout_white VertisAds__direct_view_default"
    >
      <div
        class="VertisAds__direct-item VertisAds__direct-item_view_default"
      >
        <a
          class="VertisAds__title link"
          href="url-for-direct1"
          target="_blank"
        >
          <span
            class="VertisAds__title-text"
          >
            direct1 title
          </span>
          <div
            class="VertisAds__click-area"
          />
        </a>
        <div
          class="VertisAds__content"
        >
          <div
            class="VertisAds__wheel"
          >
            <div
              class="VertisAds__wheel-ph"
            />
          </div>
          <div
            class="VertisAds__text"
          >
            direct1 body
          </div>
          <div
            class="VertisAds__foot"
          >
            <a
              class="VertisAds__domain link"
              href="url-for-direct1"
              target="_blank"
            >
              direct1 domain
            </a>
            <div
              class="VertisAds__badge"
            >
              Реклама
            </div>
            <img
              class="VertisAds__counter"
              src="common linkHeaddirect1 linkTail"
            />
          </div>
        </div>
      </div>
    </vertisads-direct>
  </vertisads-c2>
</div>
`;

exports[`тестовый баннер серверный direct должен отрисовать два баннера из одного источника с учетом приоритетов (premium+direct) 1`] = `
<div>
  <vertisads-top
    class="ym-hide-content top VertisAds VertisAds_place_top"
  >
    <vertisads-direct
      class="VertisAds__direct VertisAds__index_0 VertisAds__direct_view_default"
    >
      <div
        class="VertisAds__direct-item VertisAds__direct-item_view_default"
      >
        <a
          class="VertisAds__title link"
          href="url-for-premium"
          target="_blank"
        >
          <img
            class="VertisAds__favicon"
            src="//favicon.yandex.net/favicon/premium domain"
          />
          <span
            class="VertisAds__title-text"
          >
            premium title
          </span>
          <div
            class="VertisAds__click-area"
          />
        </a>
        <div
          class="VertisAds__content"
        >
          <div
            class="VertisAds__text"
          >
            premium body
          </div>
          <div
            class="VertisAds__foot"
          >
            <a
              class="VertisAds__domain link"
              href="url-for-premium"
              target="_blank"
            >
              premium domain
            </a>
            <div
              class="VertisAds__badge"
            >
              Реклама
            </div>
            <img
              class="VertisAds__counter"
              src="common linkHeadpremium linkTail"
            />
          </div>
        </div>
      </div>
    </vertisads-direct>
  </vertisads-top>
  <vertisads-c2
    class="ym-hide-content c2 VertisAds VertisAds_place_c2"
  >
    <vertisads-direct
      class="VertisAds__direct VertisAds__index_0 VertisAds__direct_layout_white VertisAds__direct_view_default"
    >
      <div
        class="VertisAds__direct-item VertisAds__direct-item_view_default"
      >
        <a
          class="VertisAds__title link"
          href="url-for-direct0"
          target="_blank"
        >
          <span
            class="VertisAds__title-text"
          >
            direct0 title
          </span>
          <div
            class="VertisAds__click-area"
          />
        </a>
        <div
          class="VertisAds__content"
        >
          <div
            class="VertisAds__wheel"
          >
            <div
              class="VertisAds__wheel-ph"
            />
          </div>
          <div
            class="VertisAds__text"
          >
            direct0 body
          </div>
          <div
            class="VertisAds__foot"
          >
            <a
              class="VertisAds__domain link"
              href="url-for-direct0"
              target="_blank"
            >
              direct0 domain
            </a>
            <div
              class="VertisAds__badge"
            >
              Реклама
            </div>
            <img
              class="VertisAds__counter"
              src="common linkHeaddirect0 linkTal"
            />
          </div>
        </div>
      </div>
    </vertisads-direct>
  </vertisads-c2>
</div>
`;
